# ml_eda

./: README.md  pyproject.toml
data/: data_preprocessing_done.csv
src/ml_eda/: ml_eda.ipynb
