[tool.poetry]
name = "ml-eda"
version = "0.1.0"
description = ""
authors = ["Alexander Gnusarev <alexander.gnussarev@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_eda", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
